--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,14 @@
-<!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<div class="container">
+        <div class="row align-items-center py-5">
+            <div class="col-lg-5 col-md-5 text-center">
+                <img src="https://www.rockstargames.com/VI/_next/image?url=%2FVI%2F_next%2Fstatic%2Fmedia%2FLucia_Caminos_03.e39f02a9.jpg&w=1920&q=75" alt="Profile" class="img-fluid rounded-circle profile-img">
+            </div>
+            <div class="col-lg-7 col-md-7 mb-7 mb-md-0 text-end">
+                <h2 class="titulo2 display-5 mb-4"><b>LUCIA CAMINOS</b></h2><h3 class="titulo3">El padre de Lucia le enseñó a pelear en cuanto aprendió a caminar</h3>
+                <p class="lead text-light">
+                    La vida no ha dejado de golpearla desde entonces. Luchar por su familia la llevó a la penitenciaría de Leonida, de la que solo la suerte la sacó. Lucia ha aprendido la lección: de ahora en adelante, solo decisiones inteligentes.
+                </p>
+            </div>
+        </div>
+    </div>
+     
