--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,8 +1,8 @@
 <div class="container">
         <div class="row align-items-center py-5">
             <div class="col-lg-7 col-md-7 mb-7 mb-md-0">
-                <h2 class="display-5 mb-4 text-warning text-opacity-75"><b>JASON DUVAL</b></h2><h3 class="text-danger text-opacity-75"> quiere una vida fácil, pero las cosas no hacen más que complicarse</h3>
-                <p class="lead text-light text-opacity-75">
+                <h2 class="titulo2 display-5 mb-4"><b>JASON DUVAL</b></h2><h3 class="titulo3"> quiere una vida fácil, pero las cosas no hacen más que complicarse</h3>
+                <p class="lead text-light">
                     Jason se crio rodeado de estafadores y delincuentes. Tras un tiempo en el ejército intentando dejar atrás su adolescencia problemática, acabó en los cayos haciendo lo que mejor sabe: trabajar para narcotraficantes de la zona.
                 </p>
             </div>
