--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -7,7 +7,7 @@
         </div>
         <div class="col-md-4 d-flex flex-column bg-dark">
             <div class="bg-dark flex-column d-flex">
-                <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0&list=RDxvFZjo5PgG0&start_radio=1"><img
+                <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0&list=RDxvFZjo5PgG0&start_radio=1" target="_blank"><img
                         class="img-fluid rounded mb-3"
                         src="https://gam3s.gg/_next/image/?url=https%3A%2F%2Fassets.gam3s.gg%2FNew_GTA_6_Trailer_Ahead_of_2026_Launch_b4a9b59a27.png&w=3840&q=75"
                         alt="Segundo trailer"></a>
@@ -18,7 +18,7 @@
         </div>
         <div class="col-md-4 d-flex flex-column bg-dark">
             <div class="bg-dark flex-column d-flex">
-                <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0&list=RDxvFZjo5PgG0&start_radio=1"><img
+                <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0&list=RDxvFZjo5PgG0&start_radio=1" target="_blank"><img
                         class="img-fluid rounded mb-3"
                         src="https://media.vandal.net/m/58/58300/grand-theft-auto-vi-20255616115257_11.jpg" alt="Reserva"></a>
                 <p class="text-light"><strong>Haz tu prereserva ya!</strong></p>
@@ -28,7 +28,7 @@
         </div>
         <div class="col-md-4 d-flex flex-column bg-dark">
             <div class="bg-dark flex-column d-flex">
-                <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0&list=RDxvFZjo5PgG0&start_radio=1"><img
+                <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0&list=RDxvFZjo5PgG0&start_radio=1" target="_blank"><img
                         class="img-fluid rounded mb-3"
                         src="https://i.ytimg.com/vi/QdBZY2fkU-0/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBa0wZmLbE_tFxXawyydwyf8T6iVQ"
                         alt="Primer trailer"></a>
