--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,31 +1,71 @@
-<!-- your html code here -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid bg-dark">
-    <a class="navbar-brand" href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Rockstar_Games_Logo.svg/1200px-Rockstar_Games_Logo.svg.png" alt="rockstar" width="30" height="30"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mx-auto">
-        <li class="nav-item">
-          <a class="nav-link active text-light" aria-current="page" href="https://www.rockstargames.com/videos" target="_blank">Videos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-light" href="https://www.rockstargames.com/newswire" target="_blank">Noticias</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Juegos
-          </a>
-          <ul class="dropdown-menu bg-dark">
-            <li><a class="dropdown-item text-light" href="https://www.rockstargames.com/reddeadredemption2" target="_blank">Red Dead Redemption II</a></li>
-            <li><a class="dropdown-item text-light" href="https://www.rockstargames.com/gta-v" target="_blank">Grand Theft Auto V</a></li>
-            <li><a class="dropdown-item text-light" href="https://www.rockstargames.com/bully" target="_blank">Bully</a></li>
-          </ul>
-        </li>
-        
-      </ul>
-      <a class="btn btn-warning" href="https://socialclub.rockstargames.com/rockstar-games-launcher?_gl=1*i656xl*_gcl_au*MTIzNDAyOTk0Ny4xNzYxNTk2NDM4*_ga*MzA1NjgzMjM5LjE3NjE1ODg0Mzg.*_ga_PJQ2JYZDQC*czE3NjE1OTYxNzQkbzIkZzEkdDE3NjE1OTY0MzgkajYwJGwwJGgw" role="button">Conseguir launcher</a>
-    </div>
-  </div>
-</nav>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid px-3">
+            <a class="navbar-brand" href="#"><img
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Rockstar_Games_Logo.svg/1200px-Rockstar_Games_Logo.svg.png"
+                    alt="rockstar" width="30" height="30"></a>
+            
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                
+                <i class="bi bi-list text-light fs-4"></i>
+
+            </button>
+            
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item me-lg-4 mb-2 mb-lg-0">
+                        <a class="nav-link active text-light" aria-current="page"
+                            href="https://www.rockstargames.com/videos" target="_blank">Videos</a>
+                    </li>
+                    <li class="nav-item me-lg-4 mb-2 mb-lg-0">
+                        <a class="nav-link text-light" href="https://www.rockstargames.com/newswire"
+                            target="_blank">Noticias</a>
+                    </li>
+                    <li class="nav-item dropdown me-lg-4 mb-2 mb-lg-0">
+                        <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Juegos
+                        </a>
+                        <ul class="dropdown-menu bg-dark">
+                            <li><a class="dropdown-item text-light"
+                                    href="https://www.rockstargames.com/reddeadredemption2" target="_blank">Red Dead Redemption II</a></li>
+                            <li><a class="dropdown-item text-light" href="https://www.rockstargames.com/gta-v"
+                                    target="_blank">Grand Theft Auto V</a></li>
+                            <li><a class="dropdown-item text-light" href="https://www.rockstargames.com/bully"
+                                    target="_blank">Bully</a></li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <ul class="navbar-nav ms-auto align-items-center">
+                    <li class="nav-item me-lg-2 mb-2 mb-lg-0">
+                        <a class="btn btn-warning"
+                            href="https://socialclub.rockstargames.com/rockstar-games-launcher?_gl=1*i656xl*_gcl_au*MTIzNDAyOTk0Ny4xNzYxNTk2NDM4*_ga*MzA1NjgzMjM5LjE3NjE1ODg0Mzg.*_ga_PJQ2JYZDQC*czE3NjE1OTYxNzQkbzIkZzEkdDE3NjE1OTY0MzgkajYwJGwwJGgw"
+                            role="button">Conseguir launcher</a>
+                    </li>
+                    <li class="nav-item dropdown mb-2 mb-lg-0">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <i class="bi bi-person-circle fs-4"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
+                            <li>
+                                <a class="dropdown-item" href="#">
+                                    <i class="bi bi-box-arrow-in-right me-2"></i>
+                                    Inicio de sesión
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="#">
+                                    <i class="bi bi-person-plus-fill me-2"></i>
+                                    Registrarse
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+
+            </div> </div> </nav>
