--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,3 +1,16 @@
 <!-- your html code here -->
+ <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-7 p-0">
+                <img src="https://www.rockstargames.com/VI/_next/image?url=%2FVI%2F_next%2Fstatic%2Fmedia%2FJason_and_Lucia_02_With_Logos_landscape.93ab5523.jpg&w=3840&q=75"
+                    class="img-fluid h-auto" alt="gtavi">
+            </div>
+            <div class="col-md-5 text-light d-flex flex-column justify-content-center">
+                <p class="text-uppercase fw-semibold mb-1">Grand Theft Auto VI</p>
+                <h1 class="fw-bold display-4">Ve el trailer AHORA!</h1>
+                <a class="btn btn-outline-light btn-lg mt-4 px-5"
+                    href="https://www.rockstargames.com/VI" target="_blank">trailer</button></a>
+            </div>
+        </div>
+    </div>
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p>
