--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -25,3 +25,8 @@ body{
         .navbar-dark .navbar-toggler {
              border-color: rgba(255, 255, 255, 0.1);
         }
+        .row{
+            font-family: 'Oswald', sans-serif;
+            font-weight: 500;
+            text-transform: uppercase;
+        }
