--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -34,7 +34,7 @@
                             Recibira en breves instrucciones en su correo para realizar finalizar la reserva.
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Aceptar</button>
+                            <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">Aceptar</button>
                         </div>
                     </div>
                 </div>
