--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="row">
-        <div class="col-lg-12">
-            <p>Copyright &copy; Your Website Name 2021</p>
+        <div class="col-md-12 mt-4 mb-2 ms-4">
+            <p class="text-white">Designed by Miguel, Khalid e Iker </p>
         </div>
     </div>
 </footer>
