--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,7 +1,7 @@
 <!-- your html code here -->
 <div class="container d-flex flex-column mt-5">
     <div class="d-flex flex-column align-items-center border solid rounded border-white p-4">
-        <h1 class="text-danger">Reserva ya tu copia de GTA VI</h1>
+        <h1 class="titulo2" style="font-family: 'Oswald', sans-serif;">Reserva ya tu copia de GTA VI</h1>
         <form class="bg-dark">
             <div class="row mb-3">
                 <label for="inputEmail3" class="col-md-12 text-white col-form-label">Email:</label>
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <!-- Button trigger modal -->
-            <button type="submit" class="btn btn-primary d-block mt-4 mx-auto" data-bs-toggle="modal"
+            <button type="submit" class="btn btn-warning btn-outline-light d-block mt-4 mx-auto" data-bs-toggle="modal"
                 data-bs-target="#exampleModal">
                 Reserva ya!
             </button>
@@ -34,7 +34,7 @@
                             Recibira en breves instrucciones en su correo para realizar finalizar la reserva.
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">Aceptar</button>
+                            <button type="button" class="btn  btn-outline-light" data-bs-dismiss="modal">Aceptar</button>
                         </div>
                     </div>
                 </div>
