--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,7 +1,7 @@
 <!-- your html code here -->
 <div class="container d-flex flex-column mt-5">
     <div class="d-flex flex-column align-items-center border solid rounded border-white p-4">
-        <h1 class="titulo2" style="font-family: 'Oswald', sans-serif;">Reserva ya tu copia de GTA VI</h1>
+        <h1 class="titulo2" style="font-family: 'Oswald', sans-serif;">RESERVA YA TU COPIA DE GTA VI</h1>
         <form class="bg-dark">
             <div class="row mb-3">
                 <label for="inputEmail3" class="col-md-12 text-white col-form-label">Email:</label>
